@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-24T08:17:25Z",
+  "timestamp" : "2024-02-24T16:18:00Z",
   "count_outdated" : 6803,
   "uniques_outdated" : 2718,
-  "count" : 7097,
+  "count" : 7098,
   "uniques" : 2921,
   "clones" : [
     {
@@ -106,9 +106,9 @@
     },
     {
       "timestamp": "2024-02-24T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
